flask runs locally

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -1,1 +1,15 @@
 <!-- This holds the html for the guest-book -->
+<!DOCTYPE html>
+
+<head>
+  <title>Guest Book</title>
+</head>
+
+<body>
+  <div class="container">
+    <h1>Guest Book</h1>
+    <p>
+      The guest book will eventually go here . . .
+    </p>
+  </div>
+</body>
