--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -12,4 +12,7 @@
       The guest book will eventually go here . . .
     </p>
   </div>
+
+
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
