--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -21,11 +21,10 @@
       <input type="button" id="post-button" name="post-button" value="Post" onclick="attemptPost()">
     </form>
 
-    <div id="log">
-      Posts will eventually go here . . .
-    </div>
+    <div id="log"></div>
   </div>
 
   <script src="{{ url_for('static', filename='jquery/jquery-4.3.1.js') }}"></script>
+  <script src="{{ url_for('static', filename='socketio/socketio-2.3.0.js') }}"></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
