--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -25,6 +25,7 @@
   </div>
 
   <script src="{{ url_for('static', filename='jquery/jquery-4.3.1.js') }}"></script>
+  <script src="{{ url_for('static', filename='jquery/jquery.timeago.js') }}"></script>
   <script src="{{ url_for('static', filename='socketio/socketio-2.3.0.js') }}"></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
