--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -2,30 +2,62 @@
 <!DOCTYPE html>
 
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Guest Book</title>
+
+  <!-- Bootstrap -->
+  <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+
 </head>
 
 <body>
   <div class="container">
-    <h1>Guest Book</h1>
-    <p>
-      Thank you for attending our event! Feel free to leave a message below,
-      and read what other guests have written!
-    </p>
 
-    <form>
-      <label for="name-input">Name</label>
-      <input type="text" name="name-input" id="name-input">
-      <label for="message-input">Message</label>
-      <textarea name="message-input" id="message-input" rows="4" cols="40"></textarea>
-      <input type="button" id="post-button" name="post-button" value="Post" onclick="attemptPost()">
-    </form>
+    <div class="jumbotron bg-light">
+      <h1>Guest Book</h1>
+      <p class="lead mb-0">
+        Thank you for attending our event! Feel free to leave a message below,
+        and read what other guests have written!
+      </p>
+    </div>
 
-    <div id="log"></div>
+    <div class="row">
+
+      <div class="col-lg-4">
+        <form class="form card bg-light p-1 mb-1">
+          <div class="row">
+            <div class="col-md-12 mb-1">
+              <label class="" for="name-input">Name</label>
+              <input class="form-control" type="text" name="name-input" id="name-input">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 mb-1">
+              <label class="" for="message-input">Message</label>
+              <textarea class="form-control" name="message-input" id="message-input" rows="4"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 mb-1">
+              <input class="form-control btn-lg btn-primary" type="button" id="post-button" name="post-button" value="Post" onclick="attemptPost()">
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <div class="col-lg-8">
+        <div id="log"></div>
+      </div>
+
+    </div>
   </div>
 
   <script src="{{ url_for('static', filename='jquery/jquery-4.3.1.js') }}"></script>
   <script src="{{ url_for('static', filename='jquery/jquery.timeago.js') }}"></script>
   <script src="{{ url_for('static', filename='socketio/socketio-2.3.0.js') }}"></script>
+  <script src="{{ url_for('static', filename='bootstrap/bootstrap.bundle.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
