--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -27,22 +27,22 @@
     <div class="row">
 
       <div class="col-lg-4">
-        <form class="form card bg-light p-1 mb-1">
+        <form class="form card bg-light p-1 mb-1" action="" method="" role="form" onsubmit="attemptPost();return false">
           <div class="row">
             <div class="col-md-12 mb-1">
               <label class="" for="name-input">Name</label>
-              <input class="form-control" type="text" name="name-input" id="name-input">
+              <input class="form-control" type="text" name="name-input" id="name-input" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 mb-1">
               <label class="" for="message-input">Message</label>
-              <textarea class="form-control" name="message-input" id="message-input" rows="4"></textarea>
+              <textarea class="form-control" name="message-input" id="message-input" rows="4" required></textarea>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 mb-1">
-              <input class="form-control btn-lg btn-primary" type="button" id="post-button" name="post-button" value="Post" onclick="attemptPost()">
+              <input class="form-control btn-lg btn-primary" type="submit" id="post-button" name="post-button" value="Post">
             </div>
           </div>
         </form>
