Add server connectivity status indicator

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="row">
             <div class="col-md-12 mb-1">
-              <input class="form-control btn-lg btn-primary" type="submit" id="post-button" name="post-button" value="Post">
+              <input class="form-control btn-lg btn-warning" type="submit" id="post-button" name="post-button" value="Post">
             </div>
           </div>
         </form>
