--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -27,7 +27,7 @@
     <div class="row">
 
       <div class="col-lg-4">
-        <form class="form card bg-light p-1 mb-1" action="" method="" role="form" onsubmit="attemptPost();return false">
+        <form class="form card bg-light p-1 mb-1" id='post-form' action="" method="" role="form" onsubmit="attemptPost();return false">
           <div class="row">
             <div class="col-md-12 mb-1">
               <label class="" for="name-input">Name</label>
